--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -438,7 +438,7 @@ hr {
 }
 
 .btn.btn3:hover::before {
-    background: #1d3a64; 
+    background: #ffffff62; 
     border: 1px solid transparent
 }
 
