--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -4,7 +4,7 @@
     height: 50px;         /* نفس العرض */
     object-fit: cover;    /* يظبط الصورة جوا الإطار */
     border-radius: 50%;   /* يخليها دائرة */
-    box-shadow: 0 4px 8px rgba(0,0,0,0.2); /* شادو خفيف */
+    box-shadow: 0 2px 10px rgba(255, 255, 255, 0.296); /* شادو خفيف */
     display: block;
     margin: 0 auto;
 }
