--- a/src/app/shared/components/custom-accordion/custom-accordion.component.css
+++ b/src/app/shared/components/custom-accordion/custom-accordion.component.css
@@ -1,10 +1,11 @@
 .mat-expansion-header {
-    font-family: 'Bukra';
+    font-family: 'bonFont';
+    font-weight: 800;
     margin: 0px;
     color : hsl(var(--bg)) !important;
     height: 50px;
     font-weight: bolder;
-    font-size: 22px;
+    font-size: 25px;
     /* background: rgb(176, 29, 29); */
     line-height: 50px;
 }
