--- a/src/app/shared/components/generic-form/generic-form.component.css
+++ b/src/app/shared/components/generic-form/generic-form.component.css
@@ -18,6 +18,8 @@
   display: block;             
   margin-bottom: 0.4rem;
   font-weight: 600;
+  font-family: 'bonFont'; 
+  color: hsl(var(--bg)) !important;
   font-size: 14px;
   text-align: start;          
   direction: inherit;         
@@ -46,7 +48,8 @@
 .form-item label {
   margin-bottom: 0.4rem;
   font-weight: 600;
-  color: #333;
+  font-family: 'bonFont'; 
+  color: hsl(var(--bg)) !important;
   font-size: 14px;
 }
 
@@ -54,14 +57,14 @@
   border: 1px solid #ccc;
   border-radius: 6px;
   padding: 0.9rem 0.75rem;
-  font-size: 14px;
+  font-size: 14px; 
   width: 100%;
   transition: border 0.2s, box-shadow 0.2s;
 }
 
 .custom-input:focus {
-  border-color: #265b3b;
-  box-shadow: 0 0 5px rgba(38,91,59,0.3);
+  border-color: #0eadf2;
+  box-shadow: 0 0 5px rgba(15, 92, 247, 0.3);
   outline: none;
 }
 
