--- a/src/app/shared/components/table-components/table-column/table-column.component.css
+++ b/src/app/shared/components/table-components/table-column/table-column.component.css
@@ -65,7 +65,10 @@
 .custom-label {
   height: 100%;
   width: 100%;
-  padding: 0 10px;
+  padding: 0 5px;
+  font-size: 11px;
+  font-weight: 500; 
+  font-family: 'cairoFont';
   display: flex;
   align-items: center;
   justify-content: center;
