--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,18 +1,20 @@
-   <footer>
-     <div class="footer-wrappper footer-bg">
-        <!-- Footer Start--> 
+<footer>
+    <div class="footer-wrappper footer-bg">
+        <!-- Footer Start-->
         <!-- footer-bottom area -->
         <div class="footer-bottom-area">
             <div class="container">
                 <div class="footer-border">
-                                             <div class="footer-copy-right text-center">
-                                <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                                  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved  <i class="fa fa-heart" aria-hidden="true"></i> 
-                                  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
-                              </div>
-                  </div>
-              </div>
-          </div>
-          <!-- Footer End-->
-      </div>
-  </footer> 
+                    <div class="footer-copy-right text-center">
+                        <p class="footer-copy">
+                            {{ 'Footer.Copyright' | translate:{ year: currentYear } }}
+                            <i class="fa fa-heart" aria-hidden="true"></i>
+                        </p>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Footer End-->
+    </div>
+</footer>
