--- a/src/app/shared/components/combobox-search/combobox-search.component.html
+++ b/src/app/shared/components/combobox-search/combobox-search.component.html
@@ -10,7 +10,7 @@
 </select> -->
 
 <div class="combo-shell" [class.input-error]="hasError">
-  <select class="combo"
+  <select class="custom-input"
           [(ngModel)]="selected"
           (ngModelChange)="onSelect($event)">
     <option [ngValue]="null"></option>
