--- a/src/app/shared/components/generic-form/generic-form.component.html
+++ b/src/app/shared/components/generic-form/generic-form.component.html
@@ -74,7 +74,7 @@
 
             <!-- DATE INPUT -->
             <input *ngSwitchCase="'date'"
-                   class="custom-input"
+                   class="custom-input date-field"
                    matInput
                    type="datetime-local"
                    [value]="toLocalInput(row[column.field])"
