--- a/src/app/shared/template/template.component.html
+++ b/src/app/shared/template/template.component.html
@@ -1,5 +1,11 @@
 <!-- <app-preloader></app-preloader> -->
-<app-header></app-header>
-<router-outlet></router-outlet>
-<app-footer></app-footer>
-<app-back-to-top></app-back-to-top>
+<div class="layout">
+  <app-header></app-header>
+
+  <main class="content">
+    <router-outlet></router-outlet>
+  </main>
+
+  <app-footer></app-footer>
+  <app-back-to-top></app-back-to-top>
+</div>
