--- a/src/app/shared/template/template.component.html
+++ b/src/app/shared/template/template.component.html
@@ -7,5 +7,5 @@
   </main>
 
   <app-footer></app-footer>
-  <app-back-to-top></app-back-to-top>
+  <!-- <app-back-to-top></app-back-to-top> -->
 </div>
