--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2094,7 +2094,7 @@ hr {
 }
 
 .preloader {
-    background-color: #f7f7f7;
+    background-color:transparent;
     width: 100%;
     height: 100%;
     position: fixed;
