--- a/src/app/shared/loading-spinner/loading-spinner.component.html
+++ b/src/app/shared/loading-spinner/loading-spinner.component.html
@@ -1,4 +1,11 @@
 <div class="spinner-overlay" *ngIf="loadingService.loading$ | async">
-    <div class="spinner"></div>
+  <!-- <div class="spinner"></div> -->
+  <div class="preloader d-flex align-items-center justify-content-center">
+    <div class="preloader-inner position-relative">
+      <div class="preloader-circle"></div>
+      <div class="preloader-img pere-text">
+        <img src="assets/img/logo/loder.png" alt="">
+      </div>
+    </div>
   </div>
-  
+</div>
