--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,4 +1,4 @@
-   <footer>
+   <footer class="site-footer">
      <div class="footer-wrappper footer-bg">
         <!-- Footer Start--> 
         <!-- footer-bottom area -->
