--- a/src/app/Features/reports/components/reports-form/reports-form.component.html
+++ b/src/app/Features/reports/components/reports-form/reports-form.component.html
@@ -31,8 +31,7 @@
               <label class="form-label">{{ 'Reports.StartDate' | translate }}</label>
               <span class="required-indicator">*</span>
             </div>
-            <input class="custom-input date-field" type="date" name="startDate" [(ngModel)]="startDate" required
-              [attr.dir]="'ltr'" [attr.lang]="'ar'" />
+            <input class="custom-input date-field" type="date" name="startDate" [(ngModel)]="startDate" required/>
           </div>
 
           <!-- End date (required, min=startDate) -->
