--- a/src/app/shared/template/template.component.html
+++ b/src/app/shared/template/template.component.html
@@ -1,5 +1,5 @@
 <!-- <app-preloader></app-preloader> -->
- <app-loading-spinner></app-loading-spinner>
+ <!-- <app-loading-spinner></app-loading-spinner> -->
 <div class="layout">
   <app-header></app-header>
 
