last edit for 24/08

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4035,7 +4035,8 @@ hr {
 
 .team-area .single-cat .cat-icon img {
     margin: 0 auto;
-    margin-bottom: 30px
+    margin-bottom: 30px;
+    width: 20%;
 }
 
 .team-area .single-cat .cat-cap span {
