--- a/src/app/Features/home/components/main-page/home.component.html
+++ b/src/app/Features/home/components/main-page/home.component.html
@@ -4,5 +4,6 @@
 <!-- <app-about-section1></app-about-section1> -->
 <!-- <app-topics></app-topics> -->
 <!-- <app-about-section2></app-about-section2> -->
+<app-center-statistics></app-center-statistics>
 <app-team></app-team>
 <!-- <app-about-section3></app-about-section3> -->
