--- a/src/app/Features/home/components/main-page/home.component.html
+++ b/src/app/Features/home/components/main-page/home.component.html
@@ -5,5 +5,6 @@
 <!-- <app-topics></app-topics> -->
 <!-- <app-about-section2></app-about-section2> -->
 <app-center-statistics></app-center-statistics>
+<app-classes-timeline-by-teacher></app-classes-timeline-by-teacher>
 <app-team></app-team>
 <!-- <app-about-section3></app-about-section3> -->
