--- a/src/app/Features/home/components/slider/slider.component.html
+++ b/src/app/Features/home/components/slider/slider.component.html
@@ -1,8 +1,8 @@
-<section class="slider-area ">
-    <div class="slider-active">
+<section class="slider-area">
+    <div >
         <!-- Single Slider -->
         <div class="single-slider slider-height d-flex align-items-center">
-            <div class="container">
+            <div class="container2">
                 <div class="row align-items-center g-3 hero-row">
                     <div class="col-12 col-lg hero-text-30">
                         <div class="hero__caption">
