--- a/src/app/Features/home/components/image-rotator/image-rotator.component.css
+++ b/src/app/Features/home/components/image-rotator/image-rotator.component.css
@@ -47,6 +47,23 @@
   will-change: transform;
 } 
 
+.img-wrap img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  
+  /* الشفافية من الأطراف */
+  -webkit-mask-image: radial-gradient(circle, rgba(0,0,0,1) 90%, rgba(0,0,0,0) 100%);
+  -webkit-mask-repeat: no-repeat;
+  -webkit-mask-position: center;
+  -webkit-mask-size: cover;
+
+  mask-image: radial-gradient(circle, rgba(0,0,0,1) 95%, rgba(0,0,0,0) 100%);
+  mask-repeat: no-repeat;
+  mask-position: center;
+  mask-size: cover;
+}
+
 /* arrows */
 .nav {
   position: absolute;
