--- a/src/app/Features/home/components/classes-timeline-by-teacher/classes-timeline-by-teacher.component.css
+++ b/src/app/Features/home/components/classes-timeline-by-teacher/classes-timeline-by-teacher.component.css
@@ -82,3 +82,8 @@
   margin-top: 2px;
   display: inline-block;
 }
+
+.teacher-card .timeline::before,
+.teacher-card .timeline::after {
+  content: none !important;
+}
