--- a/src/app/Features/home/components/image-rotator/image-rotator.component.css
+++ b/src/app/Features/home/components/image-rotator/image-rotator.component.css
@@ -48,21 +48,14 @@
 } 
 
 .img-wrap img {
-  object-fit: cover;
-  width: 100%;
-  height: 100%;
-  
-  /* الشفافية من الأطراف */
-  -webkit-mask-image: radial-gradient(circle, rgba(0,0,0,1) 90%, rgba(0,0,0,0) 100%);
+  -webkit-mask-image: linear-gradient(to bottom, transparent 0%, rgb(90, 106, 154) 5%, black 90%, transparent 100%);
   -webkit-mask-repeat: no-repeat;
-  -webkit-mask-position: center;
   -webkit-mask-size: cover;
-
-  mask-image: radial-gradient(circle, rgba(0,0,0,1) 95%, rgba(0,0,0,0) 100%);
+  mask-image: linear-gradient(to bottom, transparent 0%, rgb(103, 128, 160) 5%, black 90%, transparent 100%);
   mask-repeat: no-repeat;
-  mask-position: center;
   mask-size: cover;
 }
+
 
 /* arrows */
 .nav {
