--- a/src/app/Features/home/components/classes-timeline-by-teacher/classes-timeline-by-teacher.component.css
+++ b/src/app/Features/home/components/classes-timeline-by-teacher/classes-timeline-by-teacher.component.css
@@ -34,12 +34,12 @@
 }
 
 /* Timeline */
-.timeline {
+/* .timeline {
   list-style: none;
   margin: 8px 0 0;
-  padding: 0 12px 0 0;             /* مساحة يمين */
+  padding: 0 12px 0 0;             
   position: relative;
-  border-inline-end: 2px solid #eee; /* خط عمودي RTL */
+  border-inline-end: 2px solid #eee; 
 }
 
 .entry {
@@ -49,10 +49,10 @@
 
 .entry .dot {
   position: absolute;
-  inset-inline-end: -6px; /* على خط الـ timeline */
+  inset-inline-end: -6px; 
   top: 18px;
   width: 10px; height: 10px;
-  background: #8b5cf6; /* بنفسجي */
+  background: #8b5cf6; 
   border-radius: 50%;
 }
 
@@ -86,7 +86,7 @@
 .teacher-card .timeline::before,
 .teacher-card .timeline::after {
   content: none !important;
-} */
+}  */
  /* ========================== */
 
  :host { display:block; }
