--- a/src/app/Features/users/components/users.component.html
+++ b/src/app/Features/users/components/users.component.html
@@ -26,7 +26,7 @@
 
 <app-custom-accordion title="User.UserDetails">
   <app-generic-form
-    [columns]="userColumns"
+    [columns]="formCloumns"
     [selectedRow]="selectedUser"
     [alwaysEditable]="true"
     [primaryKey]="'userPk'"
