--- a/src/app/Features/auth/components/login/login.component.css
+++ b/src/app/Features/auth/components/login/login.component.css
@@ -68,6 +68,9 @@
   cursor: pointer;
   transition: transform .2s ease, box-shadow .2s ease, background-color .2s ease;
   box-shadow: 0 4px 6px rgba(0,0,0,.15);
+  font-family: 'cairoBoldFont';
+  
+
 }
 
 /* Hover */
@@ -104,6 +107,7 @@
   backdrop-filter: blur(2px);
   margin: 0;                    /* مهم: إلغاء التوسيط */
   max-width: max-content;
+  direction: rtl !important;
 }
 .langStyle{
   color:#fff; text-decoration:none; font-weight:500;
@@ -200,6 +204,7 @@
     width: 100%;
     padding: 12px;
     font-size: 15px;
+    font-family: 'cairoFont';
   }
 
   /* زرار تغيير اللغة: صغّر وابعِده عن الفورم */
