--- a/src/app/shared/components/table-components/table-column/table-column.component.html
+++ b/src/app/shared/components/table-components/table-column/table-column.component.html
@@ -140,7 +140,7 @@
     <ng-container *ngIf="column.dataType === 'date'; else plain">
       <span class="custom-label" dir="ltr">
         <ng-container *ngIf="currentRow[column.field]; else dash" class="t">
-          {{ currentRow[column.field] | date:'MM/dd/yyyy hh:mm a' }}
+          {{ currentRow[column.field] | date:'yyyy-MM-dd hh:mm a' }}
         </ng-container>
         <ng-template #dash>—</ng-template>
       </span>
