--- a/src/app/Features/pre-login/components/pre-login-footer/pre-login-footer.component.html
+++ b/src/app/Features/pre-login/components/pre-login-footer/pre-login-footer.component.html
@@ -10,48 +10,68 @@
             <div class="single-footer-caption mb-50">
               <div class="single-footer-caption mb-30">
                 <!-- logo -->
-                <div class="footer-logo mb-25">
+                <div class="footer-logo mb-25 org-info">
                   <a href="/">
                     <img src="assets/img/logo/logo.png" alt="{{organization.organizationNameEn}}" style="max-height:60px;" />
                   </a>
                 </div>
-                <div class="footer-tittle">
-                  <div class="footer-pera">
-                    <p>{{organization.organizationNameEn}} <br/> {{organization.organizationNameAr}}</p>
-                    <p>{{organization.address}}</p>
-                  </div>
-                </div>
+                      <div class="footer-tittle">
+                        <div class="org-info">
+                          <p>
+                            {{organization.organizationNameEn}} <br />
+                            {{organization.organizationNameAr}}
+                          </p>
+                        </div>
+                      </div>
                 <!-- social -->
                 <div class="footer-social">
-                  <a [href]="'mailto:' + organization.email"><i class="fa fa-envelope"></i></a>
-                  <a [href]="'tel:' + organization.phoneNumber"><i class="fa fa-phone"></i></a>
-                  <a [href]="'https://wa.me/' + organization.whatsappNumber"><i class="fab fa-whatsapp"></i></a>
+                          <div class="contact-icons">
+                            <a [href]="'https://wa.me/' + organization.whatsappNumber" target="_blank">
+                              <i class="fab fa-whatsapp"></i>
+                            </a>
+                            <a [href]="'tel:' + organization.phoneNumber">
+                              <i class="fa fa-phone"></i>
+                            </a>
+                            <a [href]="'mailto:' + organization.email">
+                              <i class="fa fa-envelope"></i>
+                            </a>
+                            </div>
                 </div>
               </div>
             </div>
           </div>
 
           <!-- Contact Info -->
-          <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6">
-            <div class="single-footer-caption mb-50">
-              <div class="footer-tittle">
-                <h4>{{ 'Footer.Contact' | translate }}</h4>
-                <ul>
-                  <li>{{ 'Footer.Email' | translate }}: 
-                    <a [href]="'mailto:' + organization.email">{{organization.email}}</a>
-                  </li>
-                  <li>{{ 'Footer.Phone' | translate }}: 
-                    <a [href]="'tel:' + organization.phoneNumber">{{organization.phoneNumber}}</a>
-                  </li>
-                  <li>{{ 'Footer.WhatsApp' | translate }}: 
-                    <a [href]="'https://wa.me/' + organization.whatsappNumber">{{organization.whatsappNumber}}</a>
-                  </li>
-                  <li>{{ 'Footer.License' | translate }}: {{organization.licenseNumber}}</li>
-                  <li>{{ 'Footer.Address' | translate }}: {{organization.address}}</li>
-                </ul>
-              </div>
+         <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6">
+          <div class="single-footer-caption mb-50">
+            <div class="footer-tittle">
+              <h4>{{ 'Footer.Contact' | translate }}</h4>
+              <ul class="contact-list">
+                <li>
+                  <i class="fa fa-envelope"></i>
+                  <a [href]="'mailto:' + organization.email">{{organization.email}}</a>
+                </li>
+                <li>
+                  <i class="fa fa-phone"></i>
+                  <a [href]="'tel:' + organization.phoneNumber">{{organization.phoneNumber}}</a>
+                </li>
+                <li>
+                  <i class="fab fa-whatsapp"></i>
+                  <a [href]="'https://wa.me/' + organization.whatsappNumber">{{organization.whatsappNumber}}</a>
+                </li>
+                <li>
+                  <i class="fa fa-id-card"></i>
+                  {{ 'Footer.License' | translate }}: {{organization.licenseNumber}}
+                </li>
+                <li>
+                  <i class="fa fa-map-marker-alt"></i>
+                  {{ 'Footer.Address' | translate }}: {{organization.address}}
+                </li>
+              </ul>
             </div>
           </div>
+        </div>
+
 
         </div>
       </div>
